@@ -12,14 +12,21 @@ common_sources = \
 
 gtk_sources = \
 	$(srcdir)/gui-gtk/TypeGraphViewer.cs \
-	$(srcdir)/gui-gtk/BacktraceViewer.cs
+	$(srcdir)/gui-gtk/BacktraceViewer.cs \
+	$(srcdir)/gui-gtk/Shell.cs \
+	$(srcdir)/gui-gtk/ShellComponent.cs \
+	$(srcdir)/gui-gtk/ShellPager.cs
 
+gtk_resources = \
+	$(srcdir)/gui-gtk/shell-ui.xml
+	
+gtk_ress= $(foreach res,$(gtk_resources), $(addprefix -resource:,$(res)),$(notdir $(res)))
 
 
 mono_heap_prof_view_sources = $(common_sources) $(gtk_sources)
 
-mono-heap-prof-view.exe : $(mono_heap_prof_view_sources)
-	$(MCS) /out:$@ $(mono_heap_prof_view_sources) /r:System.Drawing.dll @GTKSHARP_LIBS@ 
+mono-heap-prof-view.exe : $(mono_heap_prof_view_sources) $(gtk_resources)
+	$(MCS) /out:$@ $(mono_heap_prof_view_sources) $(gtk_ress) /r:System.Drawing.dll @GTKSHARP_LIBS@ 
 
 scriptdir = $(bindir)
 
