@@ -1,3 +1,7 @@
+2005-01-11  Ben Maurer  <bmaurer@ximian.com>
+
+	* Makefile.am: Add new files
+
 2005-01-09  Ben Maurer  <bmaurer@ximian.com>
 
 	* *: Initial Import.
